example-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example-2
  labels:
    app: example-2
spec:
  selector:
    app: example-2
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
